# jobsignals

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci-cd.yml  ingest.yml
api/: deps.py  main.py
api/routers/: __init__.py  companies.py  insights.py  jobs.py  salaries.py  skills.py  stats.py
api/schemas/: __init__.py  responses.py
dashboard/: index.html
db/: __init__.py  connection.py  schema.sql
ingestion/: __init__.py  models.py
ingestion/adapters/: __init__.py  adzuna.py  arbeitnow.py  base.py  himalayas.py  jobicy.py  jooble.py  remoteok.py  remotive.py  seed.py  serpapi.py  themuse.py  weworkremotely.py
pipeline/: __init__.py  aggregations.py  deduplication.py  runner.py
pipeline/normalization/: __init__.py  skill_extractor.py  title_normalizer.py
scripts/: classify_titles.py  daily_cron.sh  ingest_real.py  install_classify_cron.sh  install_launchd.sh  run_pipeline.py  scheduler.py  seed_data.py
tests/: test_api.py  test_pipeline.py
